force-app/main/default/objects/PAB_Task__c/PAB_Task__c.object-meta.xml
<CustomObject>
    <description>Personal Assistant Task for the Life OS application.</description>
    <label>Assistant Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assistant Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>