force-app/main/default/objects/PAB_Task__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>The date and time when the task was completed.</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>