force-app/main/default/objects/PAB_Task__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>The context where this task should be performed.</description>
    <label>Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>@Home</fullName>
            </value>
            <value>
                <fullName>@Work</fullName>
            </value>
            <value>
                <fullName>@Errands</fullName>
            </value>
            <value>
                <fullName>@Computer</fullName>
            </value>
            <value>
                <fullName>@Anywhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>