force-app/main/default/objects/PAB_Task__c/fields/Created_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this task was created by the agent or manually by the user.</description>
    <label>Created By Agent</label>
    <type>Checkbox</type>
</CustomField>