force-app/main/default/objects/PAB_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date and time when the task is due.</description>
    <label>Due Date</label>
    <type>DateTime</type>
</CustomField>