force-app/main/default/objects/PAB_Task__c/fields/Energy_Level__c.field-meta.xml
<CustomField>
    <fullName>Energy_Level__c</fullName>
    <description>The estimated energy required to complete this task.</description>
    <label>Energy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>