force-app/main/default/objects/PAB_Task__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date and time when the task should start.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>