force-app/main/default/objects/PAB_Task__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The title or summary of the task.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>